k8s-argocd/argocd.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    #cert-manager.io/cluster-issuer: letsencrypt-nginx
    cert-manager.io/issuer: letsencrypt-nginx
    #kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code 
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: argo-cd.bigboxapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: argocd-server
            port:
              name: https
  ingressClassName: nginx            
  tls:
  - hosts:
    - argo-cd.bigboxapp.com
    secretName: argocd-secret # do not change, this is provided by Argo CD
